--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -1,3 +1,4 @@
+database.driverClassName=com.mysql.jdbc.Driver
 database.url=jdbc:postgresql://localhost:5432/topjava
-database.username=user
-database.password=password
+database.username=postgres
+database.password=postgres
