--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -1,4 +1,4 @@
-database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:postgresql://localhost:5432/topjava
+database.driverClassName=org.postgresql.Driver
+database.url=jdbc:postgresql://localhost:5432/postgres
 database.username=postgres
 database.password=postgres
