HW06 1str review

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -9,4 +9,19 @@ user.roles=Roles
 user.active=Active
 user.registered=Registered
 meal.title=Meals
+meal.filter.fromdate=From Date (inclusive)
+meal.filter.todate=To Date (inclusive)
+meal.filter.fromtime=From Time (inclusive)
+meal.filter.totime=To Time (inclusive)
+meal.filter=Filter
+meal.add=Add Meal
+meal.date=Date
+meal.description=Description
+meal.calories=Calories
+meal.update=Update
+meal.delete=Delete
+meal.edit=Edit Meal
+meal.save=Save
+meal.discard=Cancel
 common.select=Select
+meal.range="Enter calories (10-5000)"
