HW10 without 3task

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -44,3 +44,5 @@ common.appError=Application error
 common.confirm=Are you sure?
 common.save=Save
 common.cancel=Cancel
+common.validation=Validation error data
+common.notempty=should not be empty
